--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "FLASH-MD Pairing",
+    "name": "IBRAHIM-TECH PAIRING-CODE",
     "description": "FLASH-MD WA bot, Created by France King",
     "logo": "https://telegra.ph/file/5cd90362ad7c6cbb60069.jpg",
     "repository": "https://github.com/franceking1/Flash-Md-Session",
