--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
     "name": "IBRAHIM-TECH PAIRING-CODE",
-    "description": "FLASH-MD WA bot, Created by France King",
-    "logo": "https://telegra.ph/file/5cd90362ad7c6cbb60069.jpg",
-    "repository": "https://github.com/franceking1/Flash-Md-Session",
-    "keywords": ["FlashMd"],
+    "description": "IBRAHIM-TECH WA bot, Created by France King",
+    "logo": "https://telegra.ph/file/fee6cfb80a0d9e7de6659.jpg",
+    "repository": "https://github.com/ibrahimaitech/IBRAHIM-AI-10.10-pair",
+    "keywords": ["IBRAHIM-TECH"],
     "success_url": "/", 
     "buildpacks": [{ "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" } ],
     "env": {      
