--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
     "start": "node Flash-Md.js"
   },
-  "author": "France King",
+  "author": "King Ibrahim",
   "license": "GPL-3.0 license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
