--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "IBRAHIM-TECH PAIRING-CODE",
     "description": "IBRAHIM-TECH WA bot, Created by France King",
     "logo": "https://telegra.ph/file/fee6cfb80a0d9e7de6659.jpg",
-    "repository": "https://github.com/ibrahimaitech/IBRAHIM-AI-10.10-pair",
+    "repository": "https://github.com/Giftedmaurice/giftedmdV2-session-generator",
     "keywords": ["IBRAHIM-TECH"],
     "success_url": "/", 
     "buildpacks": [{ "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" } ],
