--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "node" : ">=20.0.0"
     },
     "scripts": {
-    "start": "node Gifted-Tech.js"
+    "start": "node Ibrahim-Tech.js"
   },
-  "author": "GiftedTech",
+  "author": "IbrahimTech",
   "license": "GPL-3.0 license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
